--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	],
 	"activationEvents": [
 		"onCommand:darwin2.helloWorld",
-		"onWebviewPanel:darwin2web"
+		"onWebviewPanel:darwin2web",
+		"onCommand:itemClick"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
@@ -20,7 +21,25 @@
 				"command": "darwin2.helloWorld",
 				"title": "darwin2"
 			}
-		]
+		],
+		"viewsContainers": {                        
+			"activitybar": [                        
+				{
+					"id": "treeView",               
+					"title": "treeView",            
+					"icon": "src/resources/dep.png"    
+				}
+			]
+		},
+		"views": {                                  
+			"treeView": [                           
+				{
+					"id": "treeView-item",          
+					"name": "item",                 
+					"when": ""                      
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run package",
