--- a/package.json
+++ b/package.json
@@ -12,7 +12,18 @@
 	"activationEvents": [
 		"onCommand:darwin2.helloWorld",
 		"onWebviewPanel:darwin2web",
-		"onCommand:itemClick"
+		"onCommand:itemClick",
+		"onCommand:treeView.opt",
+		"onCommand:treeView.viewFunc",
+		"onCommand:convertor.opt",
+		"onCommand:convertor.viewFunc",
+		"onCommand:simulator.opt",
+		"onCommand:simulator.viewFunc",
+		"onView:multiLevelTree",
+		"onView:treeView-item",
+		"onCommand:treeView-item.newproj",
+		"onCommand:treeView-item.datavis",
+		"onCommand:treeView-item.import"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
@@ -20,14 +31,75 @@
 			{
 				"command": "darwin2.helloWorld",
 				"title": "darwin2"
+			},
+			{
+				"command": "multiLevelTree.newproj",
+				"title": "new_proj",
+				"icon":"src/resources/project.png"
+			},
+			{
+				"command": "treeView-item.datavis",
+				"title": "可视化",
+				"icon":"src/resources/vis.png"
+			},
+			{
+				"command": "treeView-item.newproj",
+				"title": "创建新的项目",
+				"icon":"src/resources/project.png"
+			},
+			{
+				"command": "treeView-item.import",
+				"title": "导入",
+				"icon":"src/resources/import.png"
 			}
 		],
+		"menus": {
+			"view/title": [
+				{
+					"command": "treeView-item.newproj",
+					"when": "view == treeView-item",
+					"group": "navigation"
+				},
+				{
+					"command": "multiLevelTree.newproj",
+					"when": "view == multiLevelTree",
+					"group": "navigation"
+				}
+			],
+			"view/item/context": [
+				{
+					"command": "treeView-item.datavis",
+					"when": "view == treeView-item && viewItem == 数据 || viewItem == 模型",
+					"group": "inline"
+				},
+				{
+					"command": "treeView-item.import",
+					"when": "view == treeView-item && viewItem != 项目 && viewItem != 数据",
+					"group": "inline"
+				}
+			]
+		},
 		"viewsContainers": {                        
 			"activitybar": [                        
 				{
 					"id": "treeView",               
-					"title": "treeView",            
+					"title": "导航栏",            
 					"icon": "src/resources/dep.png"    
+				},
+				{
+					"id": "convertor",
+					"title": "转换",
+					"icon": "src/resources/convert.png"
+				},
+				{
+					"id": "simulator",
+					"title": "仿真器",
+					"icon": "src/resources/simulate_run.png"
+				},
+				{
+					"id": "lang_convertor",
+					"title": "darwinLang转换",
+					"icon": "src/resources/imgs/lang_convert.png"
 				}
 			]
 		},
@@ -37,6 +109,33 @@
 					"id": "treeView-item",          
 					"name": "模型转换器",                 
 					"when": ""                      
+				}
+			],
+			"convertor":[
+				{
+					"id": "item_convertor",
+					"name": "item_convertor",
+					"when": ""
+				}
+			],
+			"simulator":[
+				{
+					"id": "item_simulator",
+					"name": "item_simulator",
+					"when": ""
+				}
+			],
+			"lang_convertor":[
+				{
+					"id": "item_darwinLang_convertor",
+					"name": "item_darwinLang_convertor",
+					"when": ""
+				}
+			],
+			"explorer": [
+				{
+					"id": "multiLevelTree",
+					"name": "multiLevelTree"
 				}
 			]
 		}
