--- a/package.json
+++ b/package.json
@@ -56,6 +56,14 @@
 			{
 				"command": "treeView.proj_rename",
 				"title": "项目属性修改"
+			},
+			{
+				"command": "treeView.proj_save",
+				"title": "项目保存"
+			},
+			{
+				"command": "treeView.proj_load",
+				"title":"项目加载"
 			}
 		],
 		"menus": {
@@ -63,6 +71,11 @@
 				{
 					"command": "treeView-item.newproj",
 					"when": "view == treeView-item",
+					"group": "inline"
+				},
+				{
+					"command": "treeView.proj_load",
+					"when": "view == treeView-item && viewItem != 数据 && viewItem != 模型 && viewItem != 训练数据 && viewItem != 测试数据 && viewItem != 测试数据标签 && viewItem != 模型",
 					"group": "inline"
 				}
 			],
@@ -79,6 +92,10 @@
 				},
 				{
 					"command": "treeView.proj_rename",
+					"when": "view == treeView-item && viewItem != 数据 && viewItem != 模型 && viewItem != 训练数据 && viewItem != 测试数据 && viewItem != 测试数据标签 && viewItem != 模型"
+				},
+				{
+					"command": "treeView.proj_save",
 					"when": "view == treeView-item && viewItem != 数据 && viewItem != 模型 && viewItem != 训练数据 && viewItem != 测试数据 && viewItem != 测试数据标签 && viewItem != 模型"
 				}
 			]
