--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
 			{
 				"command": "treeView.proj_load",
 				"title":"项目加载"
+			},
+			{
+				"command": "treeView.proj_remove",
+				"title": "项目移除"
 			}
 		],
 		"menus": {
@@ -96,6 +100,10 @@
 				},
 				{
 					"command": "treeView.proj_save",
+					"when": "view == treeView-item && viewItem != 数据 && viewItem != 模型 && viewItem != 训练数据 && viewItem != 测试数据 && viewItem != 测试数据标签 && viewItem != 模型"
+				},
+				{
+					"command": "treeView.proj_remove",
 					"when": "view == treeView-item && viewItem != 数据 && viewItem != 模型 && viewItem != 训练数据 && viewItem != 测试数据 && viewItem != 测试数据标签 && viewItem != 模型"
 				}
 			]
