--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
-    "python.pythonPath": "E:\\softwares\\python3.7\\python.exe"
+    "python.pythonPath": "C:\\Users\\lc\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
