--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"onCommand:treeView-item.newproj",
 		"onCommand:treeView-item.datavis",
 		"onCommand:treeView-item.import",
-		"onCommand:convertor.new_proj"
+		"onCommand:convertor.new_proj",
+		"*"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
