--- a/package.json
+++ b/package.json
@@ -197,8 +197,8 @@
 				},
 				{
 					"id": "lang_convertor",
-					"title": "生成DarwinLang",
-					"icon": "src/resources/imgs/lang_convert.png"
+					"title": "生成二进制模型",
+					"icon": "src/resources/imgs/darwin_binary.png"
 				}
 			]
 		},
