--- a/package.json
+++ b/package.json
@@ -205,12 +205,12 @@
 				},
 				{
 					"id": "simulator",
-					"title": "查看仿真结果",
+					"title": "查看模拟结果",
 					"icon": "src/resources/simulate_run.png"
 				},
 				{
 					"id": "lang_convertor",
-					"title": "生成二进制模型",
+					"title": "编译生成二进制模型",
 					"icon": "src/resources/imgs/darwin_binary.png"
 				}
 			]
