add entrance editor for implementing self algorithm

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"onCommand:snn_model_ac.show_snn_model",
 		"onCommand:item_convertor.start_convert",
 		"onCommand:item_darwinLang_convertor.convert_to_darwin2",
-		"onCommand:item_darwinLang_convertor.convert_to_darwin3",
 		"*"
 	],
 	"main": "./dist/extension.js",
@@ -100,11 +99,7 @@
 			},
 			{
 				"command": "item_darwinLang_convertor.convert_to_darwin2",
-				"title": "转换生成达尔文二代可部署文件"
-			},
-			{
-				"command": "item_darwinLang_convertor.convert_to_darwin3",
-				"title": "转换生成达尔文三代可部署文件"
+				"title": "编译"
 			}
 		],
 		"menus": {
@@ -178,10 +173,6 @@
 				},
 				{
 					"command": "item_darwinLang_convertor.convert_to_darwin2",
-					"when": "view == treeView-item && viewItem == SNN模型"
-				},
-				{
-					"command": "item_darwinLang_convertor.convert_to_darwin3",
 					"when": "view == treeView-item && viewItem == SNN模型"
 				}
 			]
