--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "darwin2",
 	"displayName": "darwin2",
 	"description": "VSCode Darwin2 IDE extension",
-	"publisher":"lc",
+	"publisher": "lc",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.52.0"
@@ -263,23 +263,25 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.52.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
-		"eslint": "^7.15.0",
+		"@types/vscode": "^1.52.0",
 		"@typescript-eslint/eslint-plugin": "^4.9.0",
 		"@typescript-eslint/parser": "^4.9.0",
+		"eslint": "^7.15.0",
 		"glob": "^7.1.6",
+		"iconv-lite": "^0.6.3",
 		"mocha": "^8.1.3",
+		"ts-loader": "^8.0.11",
 		"typescript": "^4.1.2",
 		"vscode-test": "^1.4.1",
-		"ts-loader": "^8.0.11",
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0"
 	},
 	"dependencies": {
 		"audio-decode": "^1.4.0",
-		"axios": "^0.21.1"
+		"axios": "^0.21.1",
+		"encoding": "^0.1.13"
 	}
 }
